package formation;

abstract public class Person {
    private String nom;
    private String prenom;
    private String telephone;

    @Override
    public String toString() {
        return "Person{}";
    }
}
